Dev: Mongo DB connected.

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+MONGODB_URI=mongodb+srv://qwerty:LcnyFty45XsJQfim@taskmanager.fzfu1sz.mongodb.net/?retryWrites=true&w=majority&appName=taskManager
 PORT=8000
